force-app/main/default/objects/PSA_Version__c/PSA_Version__c.object-meta.xml
<CustomObject>
    <description>One PSA draft/counter exchanged during contract negotiation. Child of Contract_Review__c; the full set is the version history Junior asked for (who sent it, when, the redline summary, and the document link).</description>
    <label>PSA Version</label>
    <nameField>
        <displayFormat>PSA-{0000}</displayFormat>
        <label>PSA Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Versions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>