force-app/main/default/objects/PSA_Version__c/fields/Contract_Review__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Review</label>
    <referenceTo>Contract_Review__c</referenceTo>
    <relationshipLabel>PSA Versions</relationshipLabel>
    <relationshipName>PSA_Versions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>