force-app/main/default/objects/PSA_Version__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <description>Link to this version&apos;s document (OneDrive convention).</description>
    <label>Document URL</label>
    <type>Url</type>
</CustomField>