force-app/main/default/objects/PSA_Version__c/fields/Version_Date__c.field-meta.xml
<CustomField>
    <fullName>Version_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>When this PSA version was sent/received (editable for backdating; defaults to today).</description>
    <label>Version Date</label>
    <type>Date</type>
</CustomField>